skeleton loading debug ver

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       </div>
     </article> -->
     <div class="shop">
+      <span>everything you need in here  <i data-feather="shopping-cart" class="logo"></i> </span>
       <div class="sofa">
       <div class="product-card">
         <div class="card-image">
@@ -152,11 +153,92 @@
           <button class="wishlist"> <i data-feather="heart" class="love"></i></button>
          </div>
       </div>
+        <div class="product-card">
+        <div class="card-image">
+          <img src="toko/produk9.png">
+        </div>
+        <div class="card-rating">
+          <span>luxury sofa</span>
+          <div class="rating-star"> 
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          </div>
+        </div>
+        <div class="card-button">
+          <button class="buy">$19.20</button>
+          <input type="checkbox">
+          <button class="wishlist"> <i data-feather="heart" class="love"></i></button>
+         </div>
+      </div>
+        <div class="product-card">
+        <div class="card-image">
+          <img src="toko/produk9.png">
+        </div>
+        <div class="card-rating">
+          <span>luxury sofa</span>
+          <div class="rating-star"> 
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          </div>
+        </div>
+        <div class="card-button">
+          <button class="buy">$19.20</button>
+          <input type="checkbox">
+          <button class="wishlist"> <i data-feather="heart" class="love"></i></button>
+         </div>
+      </div>
+        <div class="product-card">
+        <div class="card-image">
+          <img src="toko/produk9.png">
+        </div>
+        <div class="card-rating">
+          <span>luxury sofa</span>
+          <div class="rating-star"> 
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          </div>
+        </div>
+        <div class="card-button">
+          <button class="buy">$19.20</button>
+          <input type="checkbox">
+          <button class="wishlist"> <i data-feather="heart" class="love"></i></button>
+         </div>
+      </div>
+        <div class="product-card">
+        <div class="card-image">
+          <img src="toko/produk9.png">
+        </div>
+        <div class="card-rating">
+          <span>luxury sofa</span>
+          <div class="rating-star"> 
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          </div>
+        </div>
+        <div class="card-button">
+          <button class="buy">$19.20</button>
+          <input type="checkbox">
+          <button class="wishlist"> <i data-feather="heart" class="love"></i></button>
+         </div>
+      </div>
    </div>
+      
       <div class="bed">
       <div class="product-card">
         <div class="card-image">
-          <img src="toko/produk7.png">
+          <img src="toko/produk12.png">
         </div>
         <div class="card-rating">
           <span>luxury sofa</span>
@@ -176,7 +258,7 @@
       </div>
        <div class="product-card">
         <div class="card-image">
-          <img src="toko/produk8.png">
+          <img src="toko/produk12.png">
         </div>
         <div class="card-rating">
           <span>luxury sofa</span>
@@ -196,7 +278,67 @@
       </div>
        <div class="product-card">
         <div class="card-image">
-          <img src="toko/produk1.png">
+          <img src="toko/produk12.png">
+        </div>
+        <div class="card-rating">
+          <span>luxury sofa</span>
+          <div class="rating-star"> 
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          </div>
+        </div>
+        <div class="card-button">
+          <button class="buy">$19.20</button>
+          <input type="checkbox">
+          <button class="wishlist"> <i data-feather="heart" class="love"></i></button>
+         </div>
+      </div>
+        <div class="product-card">
+        <div class="card-image">
+          <img src="toko/produk12.png">
+        </div>
+        <div class="card-rating">
+          <span>luxury sofa</span>
+          <div class="rating-star"> 
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          </div>
+        </div>
+        <div class="card-button">
+          <button class="buy">$19.20</button>
+          <input type="checkbox">
+          <button class="wishlist"> <i data-feather="heart" class="love"></i></button>
+         </div>
+      </div>
+        <div class="product-card">
+        <div class="card-image">
+          <img src="toko/produk12.png">
+        </div>
+        <div class="card-rating">
+          <span>luxury sofa</span>
+          <div class="rating-star"> 
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          <i data-feather="star" class="star"></i>
+          </div>
+        </div>
+        <div class="card-button">
+          <button class="buy">$19.20</button>
+          <input type="checkbox">
+          <button class="wishlist"> <i data-feather="heart" class="love"></i></button>
+         </div>
+        </div>
+        <div class="product-card">
+        <div class="card-image">
+          <img src="toko/produk12.png">
         </div>
         <div class="card-rating">
           <span>luxury sofa</span>
@@ -216,7 +358,7 @@
       </div>
       <div class="product-card">
         <div class="card-image">
-          <img src="toko/produk9.png">
+          <img src="toko/produk12.png">
         </div>
         <div class="card-rating">
           <span>luxury sofa</span>
